<resources>
    <string-array name="priceRange">
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
        <item>$$$$$</item>
    </string-array>
    <string-array name="distances">
        <item>.5 mi</item>
        <item>1 mi</item>
        <item>5 mi</item>
        <item>10 mi</item>
        <item>25 mi</item>
    </string-array>
    <string name="app_name">Spice</string>
    <string name="btnSIU">Spice It Up</string>
    <string name="strProfile">Profile</string>
    <string name="strSpice">Spice It Up</string>
    <string name="strLogin">Login</string>
    <string name="strSocial">Social</string>
    <string name="picChilli" />
    <string name="title_activity_social_page">SocialPage</string>
    <string name="restaurant_name" translatable="false">Restaurant Name</string>
    <string name="restaurant_rating" translatable="false">Restaurant Rating</string>
    <string name="restaurant_phone" translatable="false">Restaurant Phone</string>
    <string name="imgRestaurant" translatable="false">Restaurant</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot_password</string>
    <string name="username_email">username_email</string>
    <string name="retype_password">Retype Password</string>
    <string name="email">Email</string>
    <string name="name">name</string>
    <string name="password_screen">Password</string>
    <string name="age">age</string>
    <string name="address">address</string>
    <string name="signup">signup</string>
    <string name="strHome">Home</string>
    <string name="strMainNotLogged">Sign In</string>
    <string name="strMainIsLogged">Hi Alan, feeling Spicy?</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="strLogout">Logout</string>
    <string name="strMoodsNav">Moods</string>
    <string name="txtLocation">Restaurant Location</string>
    <string name="btnAccept">Accept</string>
    <string name="strLoginField">Email</string>
    <string name="strRegister">strRegister</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="strRetype">Retype Password</string>
    <string name="strCreateAccount">Create Account</string>
    <string name="strFinishAccount" />
    <string name="strName">Full Name</string>
    <string name="strNewName">What\'s your name?</string>
    <string name="strPhone">Can we get your number?</string>
    <string name="strPhoneNumber">Phone: 123-456-7890</string>
    <string name="strFName">First Name</string>
    <string name="strLName">Last Name</string>
    <string name="strFinish">Finish</string>
    <string name="strChooseAMeal">What Meal Are You In The Mood For?</string>
    <string name="strBreakfast">Breakfast</string>
    <string name="strLunch">Lunch</string>
    <string name="strDinner">Dinner</string>
    <string name="title_activity_list_moods">ListMoods</string>
    <string name="strWhatIsYourMood">What Do You Wanna Call This Mood?</string>
    <string name="strCreateMood">Create Mood</string>
    <string name="title_activity_choose_category">ChooseCategory</string>
    <string name="large_text">

    </string>
    <string name="strUpload">Upload Image</string>
    <string name="loadingComplete">Loading Complete!</string>
    <string name="strUsername">Username</string>
    <string name="action_settings">Settings</string>
    <string name="strMexican">Mexican</string>
    <string name="strItalian">Italian</string>
    <string name="strBurgers">Burgers</string>
    <string name="strChinese">Chinese</string>
    <string name="strChin">Chinese</string>
    <string name="strSeafood">Seafood</string>
    <string name="strIndian">Indian</string>
    <string name="strPizza">Pizza</string>
    <string name="strFastFood">Fast Food</string>
    <string name="strBBQ">BBQ</string>
    <string name="strCafe">Cafe</string>
    <string name="strSteakhouse">Steakhouse</string>
    <string name="strBar">Bar</string>
    <string name="strChooseACategory">What Kind Of Food Do You Want?</string>
    <string name="strConfirm">Confirm</string>
    <string name="strHowMuchToSpend">How Much Do You Want To Spend?</string>
    <string name="strMaximum">Maximum</string>
    <string name="strMinimum">Minimum</string>
    <string name="strHowFarToDrive">How Far Are You Willing To Drive?</string>
    <string name="strDistance">Distance</string>
    <string name="delete">Delete</string>
    <string name="strEdit">Edit</string>
    <string name="MoodName">MoodName</string>
    <string name="Categories">Category</string>
    <string name="CurrentMood">Current Mood: </string>
    <string name="ChangeMood">Edit Mood</string>
    <string name="strMin">Min</string>
    <string name="strMax">Max</string>
    <string name="MealTime">MealTime</string>
    <string name="MoodDetails">Here\'s a Look\n At Your Mood</string>
    <string name="strChoosePreference">Choose Preference</string>
    <string name="title_activity_set_preference">SetPreference</string>
    <string name="txtmood">Blank</string>
    <string name="strEnterContactName">Enter Contact Email</string>
    <string name="strAddContact">Add Contact</string>
    <string name="TypeAMessage">Type a message...</string>
    <string name="strEnterGroupName">Enter New Group Name</string>
    <string name="strEnterEventName">Enter event name</string>
    <string name="btnNo">No</string>
    <string name="btnYes">Yes</string>
    <string name="btnDirections">Directions</string>
    <string name="txtDetails">More Details</string>
    <string name="strSelectAGroupAvatar">Select a Chat Avatar</string>
</resources>
