<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:transitionName="regUser">


    <TextView
        android:id="@+id/textMoodDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="top"
        android:text="@string/strChooseACategory"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:typeface="sans"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMoodEdit"
        android:layout_width="138dp"
        android:layout_height="80dp"
        android:layout_below="@+id/textCategories"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="219dp"
        android:layout_marginRight="219dp"
        android:layout_marginBottom="250dp"
        app:cardCornerRadius="18dp">

        <RelativeLayout
            android:id="@+id/btnMoodEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/strEdit"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardMoodDelete"
        android:layout_width="138dp"
        android:layout_height="80dp"
        android:layout_below="@+id/textCategories"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="219dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="250dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="18dp">

        <RelativeLayout
            android:id="@+id/btnMoodDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delete"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textMoodName"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@id/textMoodDetails"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="62dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/MoodName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMaxPrice"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="63dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/Categories"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textMinPrice"
        android:layout_width="112dp"
        android:layout_height="45dp"
        android:layout_below="@+id/textMealTime"
        android:layout_alignParentStart="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="31dp"
        android:layout_toStartOf="@+id/textMaxPrice"
        android:fontFamily="@font/comfortaa"
        android:text="@string/strMin"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textMaxPrice"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_below="@+id/textMealTime"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="62dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/strMax"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textMealTime"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_below="@+id/textMoodName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="65dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/MealTime"
        android:textSize="18sp" />


</RelativeLayout>