<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpiceItUp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />  <!-- Top toolbar -->

    <FrameLayout
        android:id="@+id/btnChangeCategories"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/toolbar"
        android:layout_alignEnd="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="58dp"
        android:background="@drawable/sign_in_btn"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/colorPrimary">

        <TextView
            android:id="@+id/btnBtnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ChangeMood"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgRestuarant"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/btnChangeCategories"
        android:layout_above="@+id/txtName"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgRestaurant" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_above="@id/txtLocation"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="-4dp"
        android:contentDescription="@string/restaurant_name"
        android:gravity="center"
        android:text="@string/restaurant_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_above="@id/rating"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        android:text="@string/txtLocation" />

    <RatingBar
        android:id="@+id/rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDetails"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/restaurant_rating"
        android:isIndicator="true"
        android:numStars="5"
        android:scaleX="2.0"
        android:scaleY="2.0"
        android:stepSize="0.1"
        android:theme="@style/RatingBar" />

    <TextView
        android:id="@+id/txtPhone"
        android:textColor="#0000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAccept"
        android:layout_alignEnd="@id/toolbar"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/restaurant_phone"
        android:gravity="center"
        android:text="@string/restaurant_phone"
        android:textSize="15sp" />

    <!--android:id="@+id/btnSIU"-->

    <FrameLayout
        android:id="@+id/btnSIU"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignStart="@id/toolbar"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="start"
        android:background="@drawable/sign_in_btn"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/btnLoginBtn">

        <TextView
            android:id="@+id/btnTextSIU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnSIU"
            android:textSize="18sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btnAccept"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@id/btnLoginBtn"
        android:layout_alignEnd="@id/toolbar"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="end"
        android:background="@drawable/sign_in_btn"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/btnTextAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnAccept"
            android:textSize="18sp" />
    </FrameLayout>

    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/nav_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <FrameLayout
        android:id="@+id/btnDetails"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/btnAccept"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/sign_in_btn"
        android:clickable="true"
        android:focusable="true">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtDetails"
            android:textSize="18sp" />
    </FrameLayout>

</RelativeLayout>