<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDisplay">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />  <!-- Top toolbar -->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgRestuarant"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgRestaurant" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imgRestuarant"
        android:layout_above="@+id/txtLocation"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="2dp"
        android:contentDescription="@string/restaurant_name"
        android:gravity="center"
        android:text="@string/restaurant_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_above="@id/rating"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/txtLocation" />

    <RatingBar
        android:id="@+id/rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDetails"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="23dp"
        android:layout_gravity="center"
        android:contentDescription="@string/restaurant_rating"
        android:isIndicator="true"
        android:numStars="5"
        android:scaleX="2.0"
        android:scaleY="2.0"
        android:stepSize="0.1"
        android:theme="@style/RatingBar" />


    <FrameLayout
        android:id="@+id/btnDetails"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@id/btnLoginBtn"
        android:layout_alignStart="@id/toolbar"
        android:layout_gravity="start"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/sign_in_btn"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/btnTextDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtDetails"
            android:textSize="18sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btnAccept"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@id/btnLoginBtn"
        android:layout_alignEnd="@id/toolbar"
        android:layout_gravity="end"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/sign_in_btn"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/btnTextAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnDirections"
            android:textSize="18sp" />
    </FrameLayout>

    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/nav_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>